force-app/main/default/objects/Verification_Line_Item__c/Verification_Line_Item__c.object-meta.xml
<CustomObject>
    <description>Verification Line Item</description>
    <label>Verification Line Item</label>
    <nameField>
        <displayFormat>VLI-{0000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Verification Line Items</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>