force-app/main/default/objects/Verification_Line_Item__c/fields/BL_Balance_Tenure_Months__c.field-meta.xml
<CustomField>
    <fullName>BL_Balance_Tenure_Months__c</fullName>
    <label>Balance Tenure (Months)</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>