force-app/main/default/objects/Verification_Line_Item__c/fields/BL_Consider_for_Obligation__c.field-meta.xml
<CustomField>
    <fullName>BL_Consider_for_Obligation__c</fullName>
    <label>Consider for Obligation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>