force-app/main/default/objects/Verification_Line_Item__c/fields/BL_Current_Outstanding__c.field-meta.xml
<CustomField>
    <fullName>BL_Current_Outstanding__c</fullName>
    <label>Current Outstanding</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>