force-app/main/default/objects/Verification_Line_Item__c/fields/BL_Loan_Amount__c.field-meta.xml
<CustomField>
    <fullName>BL_Loan_Amount__c</fullName>
    <label>Loan Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>