force-app/main/default/objects/Verification_Line_Item__c/fields/BL_Monthly_Installment__c.field-meta.xml
<CustomField>
    <fullName>BL_Monthly_Installment__c</fullName>
    <label>Monthly Installment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>