force-app/main/default/objects/Verification_Line_Item__c/fields/BL_Name_of_Lending_Institution__c.field-meta.xml
<CustomField>
    <fullName>BL_Name_of_Lending_Institution__c</fullName>
    <label>Name of Lending Institution</label>
    <length>255</length>
    <type>Text</type>
</CustomField>