force-app/main/default/objects/Verification_Line_Item__c/fields/BL_Purpose_of_Loan__c.field-meta.xml
<CustomField>
    <fullName>BL_Purpose_of_Loan__c</fullName>
    <label>Purpose of Loan</label>
    <length>255</length>
    <type>Text</type>
</CustomField>