force-app/main/default/objects/Verification_Line_Item__c/fields/BL_ROI__c.field-meta.xml
<CustomField>
    <fullName>BL_ROI__c</fullName>
    <label>ROI%</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>