force-app/main/default/objects/Verification_Line_Item__c/fields/Loan_Applicant__c.field-meta.xml
<CustomField>
    <fullName>Loan_Applicant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Loan Applicant</label>
    <referenceTo>Loan_Applicant__c</referenceTo>
    <relationshipLabel>Verification Line Items</relationshipLabel>
    <relationshipName>Verification_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>