force-app/main/default/objects/Verification_Line_Item__c/fields/PSL_Category__c.field-meta.xml
<CustomField>
    <fullName>PSL_Category__c</fullName>
    <label>PSL Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PSL</fullName>
            </value>
            <value>
                <fullName>Non-PSL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>