force-app/main/default/objects/Verification_Line_Item__c/fields/PSL_Sub_Category__c.field-meta.xml
<CustomField>
    <fullName>PSL_Sub_Category__c</fullName>
    <label>PSL Sub-Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Manufacture of food products</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>