force-app/main/default/objects/Verification_Line_Item__c/fields/Verification__c.field-meta.xml
<CustomField>
    <fullName>Verification__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Verification</label>
    <referenceTo>Verification__c</referenceTo>
    <relationshipLabel>Verification Line Items</relationshipLabel>
    <relationshipName>Verification_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>