force-app/main/default/objects/Verification_Line_Item__c/recordTypes/CIBIL_Obligation.recordType-meta.xml
<RecordType>
    <fullName>CIBIL_Obligation</fullName>
    <active>true</active>
    <label>CIBIL Obligation</label>
</RecordType>