force-app/main/default/objects/Verification_Line_Item__c/recordTypes/Udyam_PSL.recordType-meta.xml
<RecordType>
    <fullName>Udyam_PSL</fullName>
    <active>true</active>
    <label>Udyam PSL</label>
</RecordType>